[metadata]
name = database_testing
version = attr: database_testing.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
description = Test sqlite3 performance 
#long_description = file: README.md
#long_description_content_type = text/markdown
license = MIT license 

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	database_testing/
install_requires =

[build_ext]
debug = 1


